<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"  "Hail Yo</string>
    <string name="SiteVisitLocation">Site Visit Location</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="ACTIVEDEALS">ACTIVE DEALS</string>
    <string name="ALLDEALS">ALL DEALS</string>
    <string name="MYDEALS">MY DEALS</string>
    <string name="MYVISITS">MY VISITS</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>

    <string name="online_taxi_driver">Online Brokers</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="account">Account</string>
    <string name="cancel">Cancel</string>
    <string name="reserve">Reserve</string>
    <string name="call">Call</string>
    <string name="receipt">Receipt</string>
    <string name="home">Home</string>
    <string name="title_activity_maps">Map</string>
    <string name="placeholder">Drag Map or Enter Location here....</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="toast_twitter_signin_fail">It was not possible to Sign in with Twitter, try again later</string>
    <string name="toast_twitter_digits_fail">It was not possible to Sign up with your Phone, try again later</string>

    <string name="merchant_id">Crypsi82771941768698</string>
    <string name="merchant_key"> %6k\u0026fNAj1unwJw4V </string>
    <string name="user_name">9711139557</string>
    <string name="user_password">Paytm@198</string>
    <string name="api_key">AIzaSyDN7Beoz8F2pV5iyfbWCGBj_fOa3mG616c</string>

    <string name="fb_app_id"> 1587256568190457</string>



    <string-array name="listItems">
        <item>PAYMENT</item>
         <item>PROFILE</item>
        <item>HELP</item>
        <item>ABOUT</item>
        </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_card</item>
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_help</item>
        <item>@drawable/centerhailyo</item>
         </array>


    <string name="pbroker">PROPERTY\n  BROKER</string>
    <string name="hailmode">HAIL</string>
    <string name="yomode">YO</string>

    <string name="abroker">AUCTION\n BROKER</string>

    <string name="bbroker">BUILDER\n OFFICE</string>

    <string name="title_activity_select_payment_type">Payment Type</string>
    <string name="title_activity_paytm_wallet">Paytm Wallet</string>
    <string name="gcm_defaultSenderId">250185285941</string>


    //GCM based strings


</resources>
