<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout12"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/main_outer">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayoutbutton">

            <ViewFlipper android:id="@+id/ViewFlipper10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/turquoise"
                    android:paddingBottom="3dp"
                    android:id="@+id/upperbutton"
                    android:layout_alignParentTop="true">


                    <Button
                        android:id="@+id/requirement"
                        android:background="@color/black"
                        android:textSize="20dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:text="REQUIREMENT" />

                    <Button
                        android:id="@+id/availability"
                        android:background="@color/white"
                        android:layout_marginRight="0dp"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="AVAILABILITY" />


                </LinearLayout>




                <FrameLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/root_view"
                    android:layout_below="@+id/upperbutton">

                    <android.support.v4.widget.SwipeRefreshLayout
                        android:id="@+id/yo_refresh"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent">

                        <FrameLayout android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/lightgrey">


                            <GridView
                                android:id="@+id/yo_grid"
                                android:layout_marginTop="3dp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:numColumns="2"
                                android:verticalSpacing="5dp"
                                android:horizontalSpacing="7dp"
                                android:gravity="center"/>

                        </FrameLayout>
                    </android.support.v4.widget.SwipeRefreshLayout>


                </FrameLayout>
                </RelativeLayout>

                <FrameLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <android.support.v4.widget.SwipeRefreshLayout
                        android:id="@+id/visit_refresh"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >

                            <ListView
                                android:id="@+id/visitlist"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:divider="@color/list_divider"
                                android:dividerHeight="1dp"
                                android:listSelector="@drawable/list_row_selector" />

                        </RelativeLayout>
                    </android.support.v4.widget.SwipeRefreshLayout>


                </FrameLayout> // visit ends


                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <android.support.v4.widget.SwipeRefreshLayout
                        android:id="@+id/deal_refresh"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >

                            <ListView
                                android:id="@+id/dealslist"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:divider="@color/list_divider"
                                android:dividerHeight="1dp"
                                android:listSelector="@drawable/list_row_selector" />

                        </RelativeLayout>

                    </android.support.v4.widget.SwipeRefreshLayout>

                </FrameLayout> // deal ends



                <FrameLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/root_view4">

                    <fragment
                        android:id="@+id/map"
                        android:name="com.nexchanges.hailyo.ui.CustomMapFragment"
                        android:layout_width="match_parent"
                        tools:context=".MainActivity"
                        android:layout_height="match_parent"/>


                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/self_marker"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:id="@+id/ic_launcher" />


                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/currentlocation_icon"
                        android:layout_gravity="bottom|right"
                        android:background="@null"
                        android:id="@+id/mapmylocation" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:layout_gravity="top"
                        android:id="@+id/search_bar">


                        <TextView
                            android:id="@+id/SiteVisitLocation"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center_horizontal|center"
                            android:layout_height="wrap_content"
                            android:text="@string/SiteVisitLocation"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#28b54c" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:id="@+id/searchLocation">


                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="20dp"
                                android:src="@drawable/search"/>



                            <TextView
                                android:id="@+id/SiteVisitAddressBar"
                                android:singleLine="true"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:background="@android:color/white"
                                android:hint="@string/placeholder"
                                android:layout_gravity="center_horizontal|top" />

                        </LinearLayout>
                    </LinearLayout>





                </FrameLayout> // end of hail frame
    </ViewFlipper>

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="bottom"
            android:background="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayoutbutton">



            <Button
                android:id="@+id/yomode"
                android:layout_marginTop="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/yomode" />

            <Button
                android:id="@+id/activevisits"
                android:background="@drawable/button_border"
                android:layout_weight="1"
                android:textSize="15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:text="@string/MYVISITS" />

            <Button
                android:id="@+id/activedeals"
                android:background="@drawable/button_border"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/MYDEALS" />


            <Button
                android:id="@+id/hailmode"
                android:background="@drawable/button_border"
                android:textSize="15dp"
                android:layout_width="0dp"
                android:layout_marginTop="2dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/hailmode" />


        </LinearLayout>
    </RelativeLayout>



    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:choiceMode="singleChoice"
        android:headerDividersEnabled="true"
        android:listSelector="@drawable/list_drawer_selector"
        />


</android.support.v4.widget.DrawerLayout>