<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content_frame_yo"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/main_background">


            <FrameLayout
                android:orientation="vertical"
                android:layout_marginTop="1dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/root_view_yo">

                <fragment
                    android:id="@+id/map"
                    android:name="com.nexchanges.hailyo.ui.CustomMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="454dp"/>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linear"
                        android:background="@color/orange"
                        android:layout_gravity="center_horizontal"
                        >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:layout_margin="5dp"
                            android:textAllCaps="true"
                            android:gravity="center"
                            android:text="Your Broker will arrive shortly"></TextView>
                    </LinearLayout>


                    <ImageButton
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cancel_visit"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:layout_below="@id/linear"
                        android:layout_marginTop="15dp"
                        android:id="@+id/cancel" />


                </RelativeLayout>





                <TextView
                    android:id="@+id/timer"
                    android:layout_width="90dp"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/button_border"

                    />




            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_gravity="center_horizontal|bottom"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/mybroker"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/roundbutton"
                        android:background="@null"
                        android:paddingLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:scaleType="centerInside"
                        android:adjustViewBounds="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bname"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal|center"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#28b54c" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    >


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <Button
                            android:id="@+id/call"
                            android:background="@drawable/button_border"
                            android:textSize="12dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            android:layout_marginRight="5dp"
                            android:layout_gravity="center"
                            android:text="Call"
                            />

                        <Button
                            android:id="@+id/message"
                            android:background="@drawable/button_border"
                            android:layout_marginRight="0dp"
                            android:layout_weight="1"
                            android:textSize="12dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:text="Message" />


                    </LinearLayout>



                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:gravity="bottom"
                        android:id="@+id/ratingBar"
                         />


                </LinearLayout>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_gravity="center_horizontal|bottom">



                <Button
                    android:id="@+id/yomode"
                    android:background="@drawable/button_border"
                    android:textSize="18dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/yomode"
                    android:clickable="false"/>

                <Button
                    android:id="@+id/activevisits"
                    android:background="@drawable/button_border"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/MYVISITS" />

                <Button
                    android:id="@+id/activedeals"
                    android:background="@drawable/button_border"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/MYDEALS" />

                <Button
                    android:id="@+id/hailmode"
                    android:background="@drawable/button_border"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:text="@string/hailmode" />




            </LinearLayout>


        </LinearLayout>


    </FrameLayout>


</LinearLayout>